--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,17 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0<3.0.0"
+  sdk: '^3.6.2'
 
 dependencies:
+  animated_text_kit: ^4.2.2
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
+  cupertino_icons: 1.0.1
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
+  cloud_firestore: ^5.6.5
 
 dev_dependencies:
   flutter_test:
